[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkpkg"
dynamic = ["version"]
description = "Arch tool to rebuild packages based on package conditions or file triggers"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/gene-git/Arch-mkpkg/Docs"
Issues = "https://github.com/gene-git/Arch-mkpkg/issues"
Source = "https://github.com/gene-git/Arch-mkpkg"

[tool.hatch.version]
path = "src/mkpkg/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

