[build-system]
requires = ["uv_build>=0.9.21,<=1.0.0"]
build-backend = "uv_build"

[project]
name = "mkpkg"
description = "Arch tool to rebuild packages based on package conditions or file triggers"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "GPL-2.0-or-later"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
requires-python = ">=3.13"
version = "8.0.2"
dependencies = []

[project.urls]
Documentation = "https://github.com/gene-git/Arch-mkpkg/Docs"
Issues = "https://github.com/gene-git/Arch-mkpkg/issues"
Source = "https://github.com/gene-git/Arch-mkpkg"

[tool.uv.build-backend]
module-name = 'mkpkg_mod'
module-root = "src"
source-include = [
    '/mkpkg_mod',
    '/mkpkg_mod/py.typed',
]
source-exclude = [
    ".pytest_cache",
    "__pycache__",
    ".mypy_cache",
]

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pyalpm.vercmp"]
follow_untyped_imports = true


